created interactive column plotter and new function plot_restitution curve

--- a/process_rtxi_functions_list.ipynb
+++ b/process_rtxi_functions_list.ipynb
@@ -569,7 +569,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 26. Find a range of action potentials\n",
+    "#### 26. Plot the restitution curve\n",
+    "\n",
+    "This function uses the DataFrame with information on every action potential to create a plot of the restitution curve across all of the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_restitution_curve(everything)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 27. Find a range of action potentials\n",
     "\n",
     "The code below will find a range of single action potentials for you and save it to the variable `ap_range`. To have the function return a list of single action potential Dataframes, set `split` to `True`. If you want one Dataframe containing all the action potentials in the range, set `split` to `False`. Set `first_ap` to the index of the first action potential in the range, and set `last_ap` to the last action potential you want in the range. If you don't want the function to plot the action potentials, set `does_plot` to `False`."
    ]
@@ -591,7 +609,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 27. Find various action potentials\n",
+    "#### 28. Find various action potentials\n",
     "\n",
     "The following code will find five various action potentials from different parts of the data, and save them all to the variable `vaps`. If you don't want it to plot the five action potentials, set `does_plot` to `False`."
    ]
@@ -604,21 +622,6 @@
    "source": [
     "does_plot = True\n",
     "vaps = get_various_aps(recorded_data, does_plot)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_restitution_curve(data_table, percent_down):\n",
-    "    pop_it = []\n",
-    "    di_list = list(everything['Diastolic Intervals pre-AP (s)'])\n",
-    "    apd_list = list(everything[f'Duration {percent_down}% (s)'])\n",
-    "    plt.plot(apd_list,di_list)\n",
-    "\n",
-    "plot_restitution_curve(everything, '90')"
    ]
   }
  ],
