--- a/rtxi_processing_interface.ipynb
+++ b/rtxi_processing_interface.ipynb
@@ -114,9 +114,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 6. Graph a column in the DataFrame\n",
+    "#### 6. Plot all single action potentials\n",
     "\n",
-    "This function will plot one column from the DataFrame. Set `column` equal to the column you want to plot (`'cycle lengths'`, `'diastolic intervals'`, `'duration 30'`, `'duration 40'`, `'duration 70'`, `'duration 80'`, `'duration 90'`, `'amplitude'`, `'mdp'`, `'shape factor'`, or `'dv/dt max'`)."
+    "This function below will create an interactive plot with a slider. It will only work if you run `get_all_saps` first. Move the slider to plot different action potentials in the data."
    ]
   },
   {
@@ -125,8 +125,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "column = 'diastolic intervals'\n",
-    "graph_column(everything, column)"
+    "plot_sap_slider(all_saps)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 7. Graph information from the DataFrame\n",
+    "\n",
+    "This function will plot information across the entire DataFrame. Use the **trait** dropdown menu to select the column you want to plot."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph_column_interact(everything)"
    ]
   }
  ],
