--- a/rtxi_processing_interface.ipynb
+++ b/rtxi_processing_interface.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "#### 3. Get information on the data\n",
     "\n",
-    "The first block of code will create a DataFrame with lots of usefull information on the entire data set. If you've already run this code on the current data set, you can lode the DataFrame with the second block of code. The data table will be saved to the variable `everything`. It will also be saved to a new file in the **data** folder. Change `filename` to the what you would like the new file to be named."
+    "The first block of code will create a DataFrame with lots of usefull information on the entire data set. If you've already run this code on the current data set, you can lode the DataFrame with the second block of code. The data table will be saved to the variable `ap_features`. It will also be saved to a new file in the **data** folder. Change `filename` to the what you would like the new file to be named."
    ]
   },
   {
@@ -60,7 +60,7 @@
    "outputs": [],
    "source": [
     "filename = 'sap_summary_data'\n",
-    "everything = get_everything(recorded_data, filename)"
+    "ap_features = get_ap_features(recorded_data, filename)"
    ]
   },
   {
@@ -70,7 +70,7 @@
    "outputs": [],
    "source": [
     "filename = 'sap_summary_data'\n",
-    "everything = load_everything_dataframe(filename)"
+    "ap_features = load_ap_features(filename)"
    ]
   },
   {
@@ -89,16 +89,16 @@
    "outputs": [],
    "source": [
     "does_plot = True\n",
-    "class_tags = get_class_tags(recorded_data, everything, does_plot)"
+    "class_tags = get_class_tags(recorded_data, ap_features, does_plot)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5. Get all single action potentials\n",
+    "#### 5. Plot all single action potentials\n",
     "\n",
-    "If you already have the data table with information on every action potential, you can quickly get a list of the DataFrame of every action potential with the code below. The list will be saved to the variable `all_saps`."
+    "This function below will first make a list containing the DataFrame for every action potential and save it to `all_saps`. It will then create an interactive plot of the action potentials with a slider. Move the slider to plot different action potentials in the data."
    ]
   },
   {
@@ -107,16 +107,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_saps = get_saps_from_data_table(recorded_data, everything)"
+    "all_saps = get_saps_from_data_table(recorded_data, ap_features)\n",
+    "x = plot_sap_slider(all_saps)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 6. Plot all single action potentials\n",
+    "#### 6. Graph information from the DataFrame\n",
     "\n",
-    "This function below will create an interactive plot with a slider. It will only work if you run `get_all_saps` first. Move the slider to plot different action potentials in the data."
+    "This function will plot information across the entire DataFrame. Use the **feature** dropdown menu to select the feature of the action potentials you want to plot."
    ]
   },
   {
@@ -125,25 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_sap_slider(all_saps)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 7. Graph information from the DataFrame\n",
-    "\n",
-    "This function will plot information across the entire DataFrame. Use the **trait** dropdown menu to select the column you want to plot."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "graph_column_interact(everything)"
+    "graph_column_interact(ap_features)"
    ]
   }
  ],
