--- a/process_rtxi_functions_list.ipynb
+++ b/process_rtxi_functions_list.ipynb
@@ -183,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'sap_summary_data'\n",
+    "filename = 'trial_3_data'\n",
     "ap_features = get_ap_features(recorded_data, filename)"
    ]
   },
@@ -193,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'sap_summary_data'\n",
+    "filename = 'trial_3_data'\n",
     "ap_features = load_ap_features(filename)"
    ]
   },
@@ -261,7 +261,7 @@
    },
    "outputs": [],
    "source": [
-    "ap_number = 2\n",
+    "ap_number = 11\n",
     "does_plot = True\n",
     "sap = get_single_ap(recorded_data, ap_number, does_plot)"
    ]
@@ -281,22 +281,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def no_return_sap1(ap_data, ap_number):\n",
-    "    get_single_ap(ap_data, ap_number, True)\n",
-    "\n",
-    "\n",
-    "def no_return_sap2(ap_data, ap_number):\n",
-    "    plot_single_ap(ap_data[ap_number - 1])\n",
-    "\n",
-    "\n",
-    "def plot_sap_slider(ap_data):\n",
-    "    if type(ap_data) == pd.core.frame.DataFrame:\n",
-    "        end = len(get_cycle_lengths(ap_data))\n",
-    "        interact(no_return_sap1, ap_data=fixed(ap_data), ap_number=(1, end))\n",
-    "    elif type(ap_data) == list:\n",
-    "        end = len(ap_data)\n",
-    "        interact(no_return_sap2, ap_data=fixed(ap_data), ap_number=(1, end))\n",
-    "\n",
     "ap_data = recorded_data\n",
     "plot_sap_slider(ap_data)"
    ]
@@ -615,8 +599,8 @@
    "outputs": [],
    "source": [
     "split = False\n",
-    "first_ap = 17\n",
-    "last_ap = 20\n",
+    "first_ap = 30\n",
+    "last_ap = 39\n",
     "does_plot = True\n",
     "ap_range = get_ap_range(recorded_data, first_ap, last_ap, split, does_plot)"
    ]
