--- a/rtxi_processing_interface.ipynb
+++ b/rtxi_processing_interface.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "#### 1. Load functions from load_h5.py\n",
     "\n",
-    "The function needed to import and analyze RTXI h5 files in Python are saved in the file **load_h5.py**. Use the code below to load them into this notebook."
+    "The functions needed to import and analyze RTXI h5 files in Python are saved in the file **load_h5.py**. Use the code below to load them into this notebook."
    ]
   },
   {
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'sap_summary_data'\n",
+    "filename = 'trial_3_data'\n",
     "ap_features = get_ap_features(recorded_data, filename)"
    ]
   },
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'sap_summary_data'\n",
+    "filename = 'trial_3_data'\n",
     "ap_features = load_ap_features(filename)"
    ]
   },
@@ -123,7 +123,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "graph_column_interact(ap_features)"
