changed instructions in interface

--- a/rtxi_processing_interface.ipynb
+++ b/rtxi_processing_interface.ipynb
@@ -4,6 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Tool for processing RTXI single action potential data\n",
+    "\n",
+    "The program below will allow you to easily visualize RTXI single action potential data. It will also create and save a **.csv** file into your **data** folder with a row with information on each action potential in the data. The columns in the **.csv** file are as follows:\n",
+    "- **Start:** The index location of the start of each action potential.\n",
+    "- **End:** The index location of the end of each action potential.\n",
+    "- **Class:** Whether an action potential is spontaneous or not and, if non-spontaneous, the frequency at which this action potential was paced.\n",
+    "- **Cycle Lengths (s):** The cycle length, in seconds, of each action potential.\n",
+    "- **Diastolic Intervals pre-AP (s):** The diastolic interval, in seconds, leading up to each non-spontaneous action potential. If an action potential is spontaneous, this column will be blank.\n",
+    "- **Duration X% (s):** The duration, in seconds, of each action potential at a repolarization percent of X.\n",
+    "- **Amplitude (V):** The amplitude, in volts, of each action potential.\n",
+    "- **MDP (V):** The maximum diastolic potential, in volts, of each action potential.\n",
+    "- **Shape Factor:** The shape factor of each action potential.\n",
+    "- **dv/dt Max (V/s):** The maximum upstroke velocity, in volts per second, of each action potential.\n",
+    "\n",
+    "To visualize the data and create the **.csv** file, follow the steps below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1. Load functions from load_h5.py\n",
     "\n",
     "The functions needed to import and analyze RTXI h5 files in Python are saved in the file **load_h5.py**. Use the code below to load them into this notebook."
