added both restitution curves

--- a/process_rtxi_functions_list.ipynb
+++ b/process_rtxi_functions_list.ipynb
@@ -571,7 +571,7 @@
    "source": [
     "#### 26. Plot the restitution curve\n",
     "\n",
-    "This function uses the DataFrame with information on every action potential to create a plot of the restitution curve across all of the data."
+    "This function uses the DataFrame with information on every action potential to create a plot of the restitution curve across all of the data. The first code box uses the diastolic intervals preceding every action potential, while the second function uses the diastolic interval following each action potential."
    ]
   },
   {
@@ -581,6 +581,15 @@
    "outputs": [],
    "source": [
     "plot_restitution_curve(ap_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_restitution_curve_post_ap(ap_features)"
    ]
   },
   {
