--- a/rtxi_processing_interface.ipynb
+++ b/rtxi_processing_interface.ipynb
@@ -59,8 +59,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'attempt_2_071519.h5'\n",
-    "trial_number = 2\n",
+    "filename = 'YOUR_FILE_NAME.h5'\n",
+    "trial_number = 7\n",
     "does_plot = True\n",
     "recorded_data = load_recorded_data(filename, trial_number, does_plot)"
    ]
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'trial_3_data'\n",
+    "filename = 'YOUR_CSV_FILE_NAME'\n",
     "ap_features = get_ap_features(recorded_data, filename)"
    ]
   },
@@ -101,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'trial_3_data'\n",
+    "filename = 'YOUR_CSV_FILE_NAME'\n",
     "ap_features = load_ap_features(filename)"
    ]
   },
